Remove overridden flex properties and correct bottom header alignment

--- a/difficult/styles/main.css
+++ b/difficult/styles/main.css
@@ -72,10 +72,11 @@ body {
 #profile img {
     border-radius: 50%;
 }
+
 #bottom-header {
-    padding: 0 450px 0 165px;
+    padding: 0;
+    padding-left: 165px;
     display: flex;
-    justify-content: space-between;
     font-size: 13px;
     border-bottom: 1px solid #ebebeb;
 }
@@ -83,6 +84,7 @@ body {
     margin: 0;
     padding-left: 0;
     display: flex;
+
 }
 #bottom-header li {
     display: block;
@@ -110,13 +112,8 @@ body {
     align-self: flex-start;
     fill: #5f6368;
 }
-#left {
-    display: flex;
-    align-items: center;
-}
-#right {
-    display: flex;
-    align-items: center;
+#bottom-header #right {
+    margin-left: 100px;
 }
 li {
     list-style: none;
